refactor: remove AdminFilter and update AuthFilter for improved access control; enhance cart.jsp for better link formatting